kernel/atomgit/hwmon_ (tmp513) 缺少 REGMAP_I2C 依赖导致内核编译失败.txt
#标题
hwmon: (tmp513) 缺少 REGMAP_I2C 依赖导致内核编译失败

#内核版本
OLK-6.6

#问题现象
在使能 TMP513 驱动编译时，若 REGMAP 配置项未选中，编译过程报错终止。

#主要错误日志
drivers/hwmon/tmp513.c:162:21: error: variable 'tmp51x_regmap_config' has initializer but incomplete type
162 | static const struct regmap_config tmp51x_regmap_config = {
    |                     ^

#问题根因
驱动源码中使用了 `struct regmap_config` 结构体，但该结构体的定义依赖于 REGMAP 配置项。Kconfig 中缺少对 `REGMAP_I2C` 的依赖声明，导致在 REGMAP 未启用时结构体定义不可见，从而引发编译错误。

#解决方案
在 `drivers/hwmon/Kconfig` 文件的 `SENSORS_TMP513` 配置项中，增加 `select REGMAP_I2C`，确保编译时自动选中 REGMAP 相关依赖。

#来源
https://atomgit.com/openeuler/kernel/commit/0eaf486e1401aad43d391b66a256a71b81151425